--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
 
 <script src="js/game.js"></script>
 <script src="js/jquery-1.10.1.min.js"></script>
+
+<script src="js/moveValidator.js"></script>
 <script src="js/moveHandler.js"></script>
 <script src="js/connectionHandler.js"></script>
 <script src="js/gameState.js"></script>
