--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -20,14 +20,14 @@
   <script src="spec/MoveValidatorSpec.js"></script>
 
   <!-- include source code -->
-  <script src="../../src/js/moveGenerator.js"></script>
+  <script src="../../src/js/chessEngine/moveGenerator.js"></script>
   <script src="../../src/js/pieces/position.js"></script>
   <script src="../../src/js/pieces/piece.js"></script>
   <script src="../../src/js/pieces/pieceFactory.js"></script>
   <script src="../../src/js/pieces/imageSourceProvider.js"></script>
-  <script src="../../src/js/board.js"></script>
-  <script src="../../src/js/gameState.js"></script>
-  <script src="../../src/js/moveValidator.js"></script>
+  <script src="../../src/js/chessEngine/board.js"></script>
+  <script src="../../src/js/chessEngine/gameState.js"></script>
+  <script src="../../src/js/chessEngine/moveValidator.js"></script>
   <script src="../../src/js/defs.js"></script>
 
 
