--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -13,22 +13,26 @@
 
 
   <!-- include helper classes ... -->
-  <script src="testHelpers/boardHelper.js"></script>
+  <script src="testHelpers/testHelper.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/MoveGeneratorSpec.js"></script>
   <script src="spec/MoveValidatorSpec.js"></script>
+  <script src="spec/PieceMoveIntegrationTestSpec.js"></script>
 
   <!-- include source code -->
   <script src="../../src/js/chessEngine/moveGenerator.js"></script>
   <script src="../../src/js/pieces/position.js"></script>
   <script src="../../src/js/pieces/piece.js"></script>
+  <script src="../../src/js/pieces/move.js"></script>
   <script src="../../src/js/pieces/pieceFactory.js"></script>
   <script src="../../src/js/pieces/imageSourceProvider.js"></script>
   <script src="../../src/js/chessEngine/board.js"></script>
   <script src="../../src/js/chessEngine/gameState.js"></script>
   <script src="../../src/js/chessEngine/moveValidator.js"></script>
   <script src="../../src/js/defs.js"></script>
+  <script src="../../src/js/chessEngine/checkHandler.js"></script>
+
 
 
 </head>
