refactored bulksetIsCheckingMove into the movevalidation and tested

--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -32,6 +32,8 @@
   <script src="../../src/js/chessEngine/moveValidator.js"></script>
   <script src="../../src/js/defs.js"></script>
   <script src="../../src/js/chessEngine/checkHandler.js"></script>
+  <script src="../../src/js/jquery-1.10.1.min.js"></script>
+  <script src="../../src/js/lodash.js"></script>
 
 
 
