--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
 
 <script src="js/game.js"></script>
 <script src="js/jquery-1.10.1.min.js"></script>
+<script src="js/lodash.js"></script>
 
 <script src="js/chessEngine/moveValidator.js"></script>
 <script src="js/chessEngine/moveHandler.js"></script>
