contiuned working on game engine

--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -22,6 +22,7 @@
 
   <!-- include source code -->
   <script src="../../src/js/chessEngine/moveGenerator.js"></script>
+  <script src="../../src/js/chessEngine/moveHandler.js"></script>
   <script src="../../src/js/pieces/position.js"></script>
   <script src="../../src/js/pieces/piece.js"></script>
   <script src="../../src/js/pieces/move.js"></script>
