continued, added all tests empty for now..

--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -19,6 +19,7 @@
   <script src="spec/MoveGeneratorSpec.js"></script>
   <script src="spec/MoveValidatorSpec.js"></script>
   <script src="spec/PieceMoveIntegrationTestSpec.js"></script>
+  <script src="spec/GameStateTestSpec.js"></script>
 
   <!-- include source code -->
   <script src="../../src/js/chessEngine/moveGenerator.js"></script>
