--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -37,6 +37,10 @@
   <script src="../../src/js/jquery-1.10.1.min.js"></script>
   <script src="../../src/js/lodash.js"></script>
 
+  <script src="../../src/js/Ui/controller.js"></script>
+  <script src="../../src/js/Ui/mvcEvent.js"></script>
+  <script src="../../src/js/Ui/view.js"></script>
+
 </head>
 
 <body>
