--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,21 @@
 
 <div id="board_game"></div>
 
+<script src="js/Ui/controller.js"></script>
+<script src="js/Ui/mvcEvent.js"></script>
+<script src="js/Ui/view.js"></script>
+
 <script src="js/pieces/piece.js"></script>
 <script src="js/pieces/imageSourceProvider.js"></script>
 <script src="js/pieces/position.js"></script>
 <script src="js/pieces/pieceFactory.js"></script>
+<script src="js/pieces/move.js"></script>
 
 <script src="js/game.js"></script>
 <script src="js/jquery-1.10.1.min.js"></script>
 <script src="js/lodash.js"></script>
 
+<script src="js/chessEngine/moveGenerator.js"></script>
 <script src="js/chessEngine/moveValidator.js"></script>
 <script src="js/chessEngine/moveHandler.js"></script>
 <script src="js/connectionHandler.js"></script>
@@ -39,9 +45,7 @@
 <script src="js/defs.js"></script>
 <script src="js/main.js"></script>
 
-<script src="js/Ui/controller.js"></script>
-<script src="js/Ui/mvcEvent.js"></script>
-<script src="js/Ui/view.js"></script>
+
 
 
 
