--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
 
 <div id="board_game"></div>
 
+<script src="js/Ui/boardUi.js"></script>
+
 <script src="js/Ui/controller.js"></script>
 <script src="js/Ui/mvcEvent.js"></script>
 <script src="js/Ui/view.js"></script>
