--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -41,6 +41,8 @@
   <script src="../../src/js/Ui/mvcEvent.js"></script>
   <script src="../../src/js/Ui/view.js"></script>
 
+  <script src="../../src/js/Ui/boardUi.js"></script>
+
 </head>
 
 <body>
