fixed game start

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>JSChess</title>
 <!--    <script type="text/javascript"> if (!window.console) console = {log: function() {}}; </script>-->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
