now ui reacts to user click move...

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 <script src="js/Ui/controller.js"></script>
 <script src="js/Ui/mvcEvent.js"></script>
 <script src="js/Ui/view.js"></script>
+<script src="js/Ui/userClickMoveHandler.js"></script>
 
 <script src="js/pieces/piece.js"></script>
 <script src="js/pieces/imageSourceProvider.js"></script>
