refactored methods into util

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
 <div id="board_game"></div>
 
 <script src="js/Ui/boardUi.js"></script>
+<script src="js/util.js"></script>
 
 <script src="js/Ui/controller.js"></script>
 <script src="js/Ui/mvcEvent.js"></script>
