--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -40,8 +40,10 @@
   <script src="../../src/js/Ui/controller.js"></script>
   <script src="../../src/js/Ui/mvcEvent.js"></script>
   <script src="../../src/js/Ui/view.js"></script>
-
   <script src="../../src/js/Ui/boardUi.js"></script>
+  <script src="../../src/js/util.js"></script>
+  <script src="../../src/js/Ui/userClickMoveHandler.js"></script>
+
 
 </head>
 
