now with possiblemove highlighting

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 <script src="js/Ui/mvcEvent.js"></script>
 <script src="js/Ui/view.js"></script>
 <script src="js/Ui/userClickMoveHandler.js"></script>
+<script src="js/Ui/singleReturnEvent.js"></script>
 
 <script src="js/pieces/piece.js"></script>
 <script src="js/pieces/imageSourceProvider.js"></script>
