--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -43,7 +43,7 @@
   <script src="../../src/js/Ui/boardUi.js"></script>
   <script src="../../src/js/util.js"></script>
   <script src="../../src/js/Ui/userClickMoveHandler.js"></script>
-
+  <script src="../../src/js/Ui/singleReturnEvent.js"></script>
 
 </head>
 
