--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,29 @@
     <button type="button" id="SetFen">Set Position</button>
 </div>
 
-<script src="js/pieces/piece.js"></script>
-<script src="js/pieces/imageSourceProvider.js"></script>
-<script src="js/pieces/position.js"></script>
-<script src="js/pieces/pieceFactory.js"></script>
+<button id = 'btnCreate'>New Game</button>
+<button id = 'btnJoin'>Join Game</button>
+<input type='text' id='txtGameID'>
+<div id='divPlayers'></div>
+<div id='divBoard'></div>
 
-<script src="js/game.js"></script>
-<script src="js/jquery-1.10.1.min.js"></script>
-<script src="js/lodash.js"></script>
+<script src="pieces/piece.js"></script>
+<script src="pieces/imageSourceProvider.js"></script>
+<script src="pieces/position.js"></script>
+<script src="pieces/pieceFactory.js"></script>
 
-<script src="js/chessEngine/moveValidator.js"></script>
-<script src="js/chessEngine/moveHandler.js"></script>
-<script src="js/connectionHandler.js"></script>
-<script src="js/chessEngine/checkHandler.js"></script>
-<script src="js/chessEngine/gameState.js"></script>
-<script src="js/chessEngine/board.js"></script>
-<script src="js/defs.js"></script>
-<script src="js/main.js"></script>
+<script src="game.js"></script>
+<script src="jquery-1.10.1.min.js"></script>
+<script src="lodash.js"></script>
+
+<script src="chessEngine/moveValidator.js"></script>
+<script src="chessEngine/moveHandler.js"></script>
+<script src="connectionHandler.js"></script>
+<script src="chessEngine/checkHandler.js"></script>
+<script src="chessEngine/gameState.js"></script>
+<script src="chessEngine/board.js"></script>
+<script src="defs.js"></script>
+<script src="main.js"></script>
+<script src="client.js"></script>
 </body>
 </html>
