first attempt to integrate backend

--- a/testing/jasmine-standalone-3.6.0/SpecRunner.html
+++ b/testing/jasmine-standalone-3.6.0/SpecRunner.html
@@ -22,28 +22,28 @@
   <script src="spec/GameStateTestSpec.js"></script>
 
   <!-- include source code -->
-  <script src="../../src/js/chessEngine/moveGenerator.js"></script>
-  <script src="../../src/js/chessEngine/moveHandler.js"></script>
-  <script src="../../src/js/pieces/position.js"></script>
-  <script src="../../src/js/pieces/piece.js"></script>
-  <script src="../../src/js/pieces/move.js"></script>
-  <script src="../../src/js/pieces/pieceFactory.js"></script>
-  <script src="../../src/js/pieces/imageSourceProvider.js"></script>
-  <script src="../../src/js/chessEngine/board.js"></script>
-  <script src="../../src/js/chessEngine/gameState.js"></script>
-  <script src="../../src/js/chessEngine/moveValidator.js"></script>
-  <script src="../../src/js/defs.js"></script>
-  <script src="../../src/js/chessEngine/checkHandler.js"></script>
-  <script src="../../src/js/jquery-1.10.1.min.js"></script>
-  <script src="../../src/js/lodash.js"></script>
+  <script src="../../src/public/chessEngine/moveGenerator.js"></script>
+  <script src="../../src/public/chessEngine/moveHandler.js"></script>
+  <script src="../../src/public/pieces/position.js"></script>
+  <script src="../../src/public/pieces/piece.js"></script>
+  <script src="../../src/public/pieces/move.js"></script>
+  <script src="../../src/public/pieces/pieceFactory.js"></script>
+  <script src="../../src/public/pieces/imageSourceProvider.js"></script>
+  <script src="../../src/public/chessEngine/board.js"></script>
+  <script src="../../src/public/chessEngine/gameState.js"></script>
+  <script src="../../src/public/chessEngine/moveValidator.js"></script>
+  <script src="../../src/public/js/defs.js"></script>
+  <script src="../../src/public/chessEngine/checkHandler.js"></script>
+  <script src="../../src/public/js/jquery-1.10.1.min.js"></script>
+  <script src="../../src/public/js/lodash.js"></script>
 
-  <script src="../../src/js/Ui/controller.js"></script>
-  <script src="../../src/js/Ui/mvcEvent.js"></script>
-  <script src="../../src/js/Ui/view.js"></script>
-  <script src="../../src/js/Ui/boardUi.js"></script>
-  <script src="../../src/js/util.js"></script>
-  <script src="../../src/js/Ui/userClickMoveHandler.js"></script>
-  <script src="../../src/js/Ui/singleReturnEvent.js"></script>
+  <script src="../../src/public/Ui/controller.js"></script>
+  <script src="../../src/public/Ui/mvcEvent.js"></script>
+  <script src="../../src/public/Ui/view.js"></script>
+  <script src="../../src/public/Ui/boardUi.js"></script>
+  <script src="../../src/public/js/util.js"></script>
+  <script src="../../src/public/Ui/userClickMoveHandler.js"></script>
+  <script src="../../src/public/Ui/singleReturnEvent.js"></script>
 
 </head>
 
