--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 <script src="js/main.js"></script>
 <script src="audio_clips/audioClips.js"></script>
 <script>
-    var checkMusic=document.querySelector('input[value="mute"]');
+    let checkMusic=document.querySelector('input[value="mute"]');
     checkMusic.addEventListener('change',()=>{
             if(checkMusic.checked)
                 {
@@ -73,14 +73,14 @@
                     music_sound.play();
                 }
     });
-    let newGameClickSound=document.getElementById("newGameBtn").onclick=
+    document.getElementById("newGameBtn").onclick=
         function (){
             if(click_sound.mute!==true) {
                 click_sound.play();
             }
             init();
         }
-    var checkSoundEffects=document.querySelector('input[value="mute_all"]');
+    let checkSoundEffects=document.querySelector('input[value="mute_all"]');
     checkSoundEffects.addEventListener('change',()=> {
         if (checkSoundEffects.checked) {
             click_sound.mute = true;
@@ -91,7 +91,6 @@
             select_sound.mute = false;
         }
     });
-
 </script>
 
 
