--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,7 +14,7 @@
     <button class="button" id="newGameBtn">New Game</button>
     <br/>
 </div>
-<div class="text" id='gameID'></div>
+<div class="text" id='gameID' >Create or join a game</div>
 <div id="JoinGameDialogue">
     <br/>
     <button class="button" id='btnJoin'>Join Game</button>
