probably working version

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -65,7 +65,7 @@
 <script src="js/client.js"></script>
 
 <script src="audio_clips/audioClips.js"></script>
-<script src="audio_clips/mute.js"></script>
+<script src="audio_clips/sound.js"></script>
 
 </body>
 </html>
