--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,11 +14,13 @@
     <button class="button" id="newGameBtn">New Game</button>
     <br/>
 </div>
-<div class="text" id='gameID' ondrop="drop(ev)" ondragover="allowDrop(ev)">Create or join a game</div>
+<div class="text" id='gameID'>Create, join or load a game</div>
 <div id="JoinGameDialogue">
     <br/>
-    <button class="button" id='btnJoin'>Join Game</button>
-    <input class="input" type='text' id='txtGameID' placeholder="Enter the Game ID">
+    <form>
+        <button class="button" id='btnJoin'>Join Game</button>
+        <input class="input" type='text' id='txtGameID' placeholder="Enter the Game ID to join" required>
+    </form>
 </div>
 
 <div id="board_game"></div>
@@ -34,6 +36,13 @@
 </div>
 
 <div id="storage"></div>
+<div id="storageLoad">
+    <br/>
+    <form>
+        <button class="button" id='btnLoad'>Load Game</button>
+        <input class="input" type='text' id='txtLoadID' placeholder="Enter the Game ID to load" required>
+    </form>
+</div>
 
 <script src="Ui/boardUi.js"></script>
 <script src="js/util.js"></script>
