--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,10 +17,8 @@
 <div class="text" id='gameID'>Create, join or load a game</div>
 <div id="JoinGameDialogue">
     <br/>
-    <form>
-        <button class="button" id='btnJoin'>Join Game</button>
-        <input class="input" type='text' id='txtGameID' placeholder="Enter the Game ID to join" required>
-    </form>
+    <button class="button" id='btnJoin'>Join Game</button>
+    <input class="input" type='text' id='txtGameID' placeholder="Enter the Game ID to join">
 </div>
 
 <div id="board_game"></div>
@@ -38,10 +36,8 @@
 <div id="storage"></div>
 <div id="storageLoad">
     <br/>
-    <form>
-        <button class="button" id='btnLoad'>Load Game</button>
-        <input class="input" type='text' id='txtLoadID' placeholder="Enter the Game ID to load" required>
-    </form>
+    <button class="button" id='btnLoad'>Load Game</button>
+    <input class="input" type='text' id='txtLoadID' placeholder="Enter the Game ID to load">
 </div>
 
 <script src="Ui/boardUi.js"></script>
