--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,8 +36,10 @@
 <div id="storage"></div>
 <div id="storageLoad">
     <br/>
-    <button class="button" id='btnLoad'>Load Game</button>
-    <input class="input" type='text' id='txtLoadID' placeholder="Enter the Game ID to load">
+    <form>
+        <button class="button" id='btnLoad'>Load Game</button>
+        <input class="input" type='text' id='txtLoadID' placeholder="Enter the Game ID to load" required>
+    </form>
 </div>
 
 <script src="Ui/boardUi.js"></script>
