--- a/src/public/index.html
+++ b/src/public/index.html
@@ -36,10 +36,8 @@
 <div id="storage"></div>
 <div id="storageLoad">
     <br/>
-    <form>
-        <button class="button" id='btnLoad'>Load Game</button>
-        <input class="input" type='text' id='txtLoadID' placeholder="Enter the Game ID to load" required>
-    </form>
+    <button class="button" id='btnLoad'>Load Game</button>
+    <input class="input" type='text' id='txtLoadID' placeholder="Enter the Game ID to load">
 </div>
 
 <script src="Ui/boardUi.js"></script>
