mute effects button corrected

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -33,7 +33,7 @@
 
 <div>
     <label class="switch" v-if="option.icon && option.icon === 'mute'" for="mute_all">
-        <input type="checkbox" id="mute_all" name="mute_all" value="mute_all" checked="false"/>
+        <input type="checkbox" id="mute_all" name="mute_all" value="mute_all" checked="true"/>
         <span class="slider round"></span>
     </label>
     <label class="text" for="mute_all">Sound effects</label>
