--- a/src/public/index.html
+++ b/src/public/index.html
@@ -25,7 +25,7 @@
 
 <div>
     <label class="switch" v-if="option.icon && option.icon === 'mute'" for="mute">
-        <input type="checkbox" id="mute" name="mute" value="mute" checked="false"/>
+        <input type="checkbox" id="mute" name="mute" value="mute" checked/>
         <span class="slider round"></span>
     </label>
     <label class="text" for="mute">Music</label>
@@ -33,7 +33,7 @@
 
 <div>
     <label class="switch" v-if="option.icon && option.icon === 'mute'" for="mute_all">
-        <input type="checkbox" id="mute_all" name="mute_all" value="mute_all" checked="true"/>
+        <input type="checkbox" id="mute_all" name="mute_all" value="mute_all"/>
         <span class="slider round"></span>
     </label>
     <label class="text" for="mute_all">Sound effects</label>
