--- a/src/public/index.html
+++ b/src/public/index.html
@@ -38,8 +38,8 @@
     </label>
     <label class="text" for="mute_all">Sound effects</label>
 </div>
-
-<div id="storage"></div>
+<br/>
+<div class="text" id="storage">Saved Gamestates:</div>
 <div id="storageLoad">
     <br/>
     <button class="button" id='btnLoad'>Load Game</button>
