--- a/src/public/index.html
+++ b/src/public/index.html
@@ -46,7 +46,7 @@
     <input class="input" type='text' id='txtLoadID' placeholder="Enter the Game ID to load">
 </div>
 
-<div id="drag1">Random Game from the Storage (Drag the text into the Input field):
+<div id="drag1">Random Game from the Storage (Drag the button into the input field):
     <br/>
     <br/>
     <span id="random" draggable="true" ondragstart="drag(event)"><b>Random Game</b></span>
