--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <header>
-    <h3>JS Chess</h3>
+    <canvas id="logo" width="480" height="60"></canvas>
 </header>
+<br/>
 <div class="text" id='gameID'>Create, join or load a game</div>
 <br/>
 <div>
